v 2.0.0
=======
Database info: changed class name and attributes of `AstraDBAdminDatabaseInfo` (former 'AdminDatabaseInfo') and `AstraDBDatabaseInfo` (former 'DatabaseInfo')
Introduced `DataAPIVector` class (Iterable, Sequence): this also offers better control over vector binary serialization
Collections are optionally typed:
    - `get_collection` and `create_collection` get a `document_type` parameter to go with the type hint `Collection[MyType]`
    - if unspecified fall back to `DefaultCollection = Collection[DefaultDocumentType]` (where `DefaultDocumentType = dict[str, Any]`)
Cursors are similarly typed and are rewritten entirely:
    - `cursor.state` now has values in `CursorState` enum (take `cursor.state.value` for a string)
    - 'cursor.address' is removed from the API
    - `cursor.rewind()` returns None, mutates cursor in-place
    - removed 'cursor.distinct()': use the  corresponding collection(/table) method.
    - removed 'CursorIsStartedException': now `CursorException` raised for all state-related illegal calls
(internal) simplified timeout management classes and representations.
(internal) Async/Collection's find_one method uses findOne API command.
Removed the CommandCursor/AsyncCommandCursor classes:
  - AstraDBAdmin's `list_databases`, `async_list_databases` methods return regular lists
  - Database's `list_collections`, `list_tables` methods return regular lists
  - AsyncDatabase's `list_collections`, `list_tables` methods have become awaitable and return regular lists
Remove 'check_exists' from [Async]Database `create_collection` method (always False now)
Remove `CollectionAlreadyExistsException` class (not used anymore without `check_exists`)
Signature change from `-> {"ok": 1}` to `-> None` for some admin and schema methods:
    - AstraDBAdmin: `drop_database` (+ async)
    - AstraDBDatabaseAdmin, DataAPIDatabaseAdmin: `create_keyspace`, `drop_keyspace`, `drop` (+ async)
    - Database, AsyncDatabase: `drop_collection`, `drop_table`